# Boolean3D2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  boolean_3d.c  main.c  pipeline.txt  plane.h  ray.h  ray_plane_intersection.h  ray_triangle_intersection.h  raytraced_triangle.c  small_array.h  triangle.h  triangle_triangle_intersection.h  vec3.h
include/: aabb.h  aabb_triangle_intersection.h  deduplicate_stl_verts.h  ray_plane_intersection.h  thread_safe_dynamic_array.h  triangle.h
